--- a/test1.html
+++ b/test1.html
@@ -84,8 +84,8 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Test 1</a></li>
-            <li><a href="http://www.jeremy-ta.fr/work/onisep/d3/test2.php">Test 2</a></li>
-            <li><a href="http://www.jeremy-ta.fr/work/onisep/d3/test3.php">Test 3</a></li>
+            <li><a href="./test2.html">Test 2</a></li>
+            <li><a href="./test3.html">Test 3</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
