--- a/test3.html
+++ b/test3.html
@@ -83,8 +83,8 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="http://www.jeremy-ta.fr/work/onisep/d3/test1.php">Test 1</a></li>
-            <li><a href="http://www.jeremy-ta.fr/work/onisep/d3/test2.php">Test 2</a></li>
+            <li><a href="./test1.html">Test 1</a></li>
+            <li><a href="./test2.html">Test 2</a></li>
             <li class="active"><a href="#">Test 3</a></li>
           </ul>
         </div><!--/.nav-collapse -->
