--- a/test2.html
+++ b/test2.html
@@ -98,7 +98,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
 
     <div class="container">
       <div class="starter-template">
-          <h1>D3 Test 2</h1>
+          <h1>D3 prototype</h1>
           <h2 class="lead">Mind mapping</h2>
           <div id="onimm_"></div>
       </div>
