--- a/test2.html
+++ b/test2.html
@@ -41,6 +41,10 @@
         background-color: transparent;
       }
 
+      img.modale-close-icon {
+        padding: 0;
+      }
+
       #onimm_svg_ {
         background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,0) 0%, rgba(229,229,229,1) 100%); /* FF3.6+ */
         background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(229,229,229,1))); /* Chrome,Safari4+ */
@@ -68,14 +72,7 @@
       .jobs {
         fill-opacity: 0.9;
       }
-
-      .axis line {
-        fill: none;
-        stroke: #ddd;
-        shape-rendering: crispEdges;
-        vector-effect: non-scaling-stroke;
-      }
-
+      
       .data-text {
         text-anchor:middle;
       }
