begin integration of carte_heuristique.xml

--- a/test2.html
+++ b/test2.html
@@ -116,6 +116,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/libs/bootstrap.min.js"></script>
     <script src="js/libs/d3.min.js"></script>
-    <script src="js/onimm.js"></script>
+    <script src="js/onimm-1.0.js"></script>
   </body>
 </html>
