Center the text with foreignObject and idem for modale window

--- a/test1.html
+++ b/test1.html
@@ -22,7 +22,14 @@
         background-color: rgba(0,210,210,0.8);
       }
 
-      .bubble-body {
+      body.jobs-text-body {
+        padding: 0 1px;
+        width: 120px;
+        height: 60px;
+        background-color: transparent;
+      }
+
+      body.bubble-body {
         padding: 0;
         background-color: transparent;
       }
@@ -37,6 +44,11 @@
       }
 
       body.modale-body {
+        padding: 0;
+        background-color: transparent;
+      }
+
+      body.modale-close-body {
         padding: 0;
         background-color: transparent;
       }
@@ -73,8 +85,13 @@
         fill-opacity: 0.9;
       }
       
-      .data-text {
-        text-anchor:middle;
+      .jobs-text {
+        font-size: 15px;
+        position: relative;
+        margin: 0 1px;
+        padding: 2px;
+        width: 120px;
+        text-align: center;
       }
 
     </style>
