Begin styling modale window with slideshow

--- a/test1.html
+++ b/test1.html
@@ -7,7 +7,7 @@
     <title>Test 2 Mind map</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -15,86 +15,7 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style type="text/css" media="screen">
-
-      body {
-        padding-top: 50px;
-        background-color: rgba(0,210,210,0.8);
-      }
-
-      body.jobs-text-body {
-        padding: 0 1px;
-        width: 120px;
-        height: 60px;
-        background-color: transparent;
-      }
-
-      body.bubble-body {
-        padding: 0;
-        background-color: transparent;
-      }
-
-      body.bubble-foreignObject {
-        padding: 0;
-      }
-
-      img.bubble {
-        width: 100%;
-        height: 100%;
-      }
-
-      body.modale-body {
-        padding: 0;
-        background-color: transparent;
-      }
-
-      body.modale-close-body {
-        padding: 0;
-        background-color: transparent;
-      }
-
-      img.modale-close-icon {
-        padding: 0;
-      }
-
-      #onimm_svg_ {
-        background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,0) 0%, rgba(229,229,229,1) 100%); /* FF3.6+ */
-        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(229,229,229,1))); /* Chrome,Safari4+ */
-        background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,0) 0%,rgba(229,229,229,1) 100%); /* Chrome10+,Safari5.1+ */
-        background: -o-radial-gradient(center, ellipse cover,  rgba(255,255,255,0) 0%,rgba(229,229,229,1) 100%); /* Opera 12+ */
-        background: -ms-radial-gradient(center, ellipse cover,  rgba(255,255,255,0) 0%,rgba(229,229,229,1) 100%); /* IE10+ */
-        background: radial-gradient(ellipse at center,  rgba(255,255,255,0) 0%,rgba(229,229,229,1) 100%); /* W3C */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#e5e5e5',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
-      }
-
-      svg .draggable { cursor: move; }
-
-      .dragging {
-        fill: rgba(0,65,200,0.4);
-        stroke: #212121;
-      }
-
-      .circle {
-        fill: #ccc;
-        stroke: #ff400d;
-        stroke-width: 1.5px;
-      }
-
-      .jobs {
-        fill-opacity: 0.9;
-      }
-      
-      .jobs-text {
-        font-size: 15px;
-        position: relative;
-        margin: 0 1px;
-        padding: 2px;
-        width: 120px;
-        text-align: center;
-      }
-
-    </style>
+    <link href="css/onimm.css" rel="stylesheet">
   </head>
   <body>
 
@@ -123,8 +44,16 @@
       <div class="starter-template">
           <h1>D3 integration of carte_heuristique.xml</h1>
           <div id="onimm_"></div>
+
+          <div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </div>
+
       </div>
     </div>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script-->
