Improve the prototype in version 1.2 : bold, less color bonds, refactor the code

--- a/test20.html
+++ b/test20.html
@@ -68,11 +68,11 @@
       onimm = Onimm("onimm_", "10183", "./data/carte_heuristique.xml");
 
 
-      window.setTimeout(function() {
-        console.log("rev");
-        $("#onimm_svg_").remove();
-        onimm = Onimm("onimm_", "10053", "./data/carte_heuristique.xml");
-      }, 5000);
+      // window.setTimeout(function() {
+      //   console.log("rev");
+      //   $("#onimm_svg_").remove();
+      //   onimm = Onimm("onimm_", "10053", "./data/carte_heuristique.xml");
+      // }, 5000);
 
     </script>
   </body>
