Set historic array for node navigation; historic container; improve animation

--- a/test20.html
+++ b/test20.html
@@ -65,7 +65,7 @@
     <script>
         // Onisep Mind Mapping
       var onimm = onimm || {};
-      onimm = Onimm("onimm_", "10183", "./data/carte_heuristique.xml");
+      onimm = Onimm("onimm_", "10183", "./data/carte_heuristique.xml", []);
 
 
       // window.setTimeout(function() {
