Add historic nodes only if not already in array

--- a/test20.html
+++ b/test20.html
@@ -15,31 +15,10 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link href="css/onimm.css" rel="stylesheet">
+    <link href="css/main-onimm.css" rel="stylesheet">
+    <link href="css/theme-onimm.css" rel="stylesheet">
   </head>
   <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Onisep Mind Map</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Test 20</a></li>
-            <li><a href="./test200.html">Test 200</a></li>
-            <li><a href="./test2000.html">Test 2000</a></li>
-            <li><a href="./test20000.html">Test 20000</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
 
     <div class="container">
       <div class="starter-template">
