Clean css class ; limit historic to 3

--- a/test20.html
+++ b/test20.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="starter-template">
           <h1>D3 integration of carte_heuristique.xml</h1>
-          <div id="onimm_"></div>
+          <div id="onimm-"></div>
 
           <div>
             <p>
@@ -44,7 +44,7 @@
     <script>
         // Onisep Mind Mapping
       var onimm = onimm || {};
-      onimm = Onimm("onimm_", "10183", "./data/carte_heuristique.xml", []);
+      onimm = Onimm("onimm-", "10183", "./data/carte_heuristique.xml", []);
 
 
       // window.setTimeout(function() {
