--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Test 2 Mind map</title>
+    <title>Carte heuristique</title>
 
-    <!-- Bootstrap -->
+    <!-- -->
     <link href="css/normalize.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -15,19 +15,24 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link href="css/theme-onimm.css" rel="stylesheet">
-    <link href="css/main-onimm.css" rel="stylesheet">  
+    <link href="css/theme-old.css" rel="stylesheet">
+    <link href="css/main-old.css" rel="stylesheet">
+    <link href="css/onimm-main.css" rel="stylesheet">
+    <link href="css/onimm-theme.css" rel="stylesheet">
   </head>
   <body>
 
     <div class="container">
       <div class="starter-template">
-          <h1>D3 integration of carte_heuristique.xml</h1>
+          <h1>Carte heuristique des métiers</h1>
           <div id="onimm-"></div>
 
           <div>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Carte heuristique des métiers de l'Onisep.
+                Cliquez sur le noeud central pour avoir de l'information dessus.
+                Cliquez sur les noeuds périphériques pour naviguer vers eux.
+                L'historique se crée au fur et à mesure de la navigation dans la carte heuristique.
             </p>
           </div>
 
