--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Carte heuristique</title>
-
-    <!-- -->
-    <link href="css/normalize.css" rel="stylesheet">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+<!--     
     <link href="css/theme-old.css" rel="stylesheet">
     <link href="css/main-old.css" rel="stylesheet">
+     -->
+
+<!--     <link href="css/normalize.css" rel="stylesheet"> -->
     <link href="css/onimm-main.css" rel="stylesheet">
     <link href="css/onimm-theme.css" rel="stylesheet">
   </head>
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="starter-template">
           <h1>Carte heuristique des métiers</h1>
-          <div id="onimm-"></div>
+          <div id="onimm" class="onimm-container"></div>
 
           <div>
             <p>
@@ -45,11 +45,11 @@
     <script src="js/libs/jquery-1.8.2.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/libs/d3.min.js"></script>
-    <script src="js/onimm-1.2.js"></script>
+    <script src="js/onimm-1.3.js"></script>
     <script>
         // Onisep Mind Mapping
       var onimm = onimm || {};
-      onimm = Onimm("onimm-", "10183", "./data/carte_heuristique.xml", []);
+      onimm = Onimm("onimm", "10183", "./data/carte_heuristique.xml", []);
 
 
       // window.setTimeout(function() {
