--- a/independant.html
+++ b/independant.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Embed - Carte heuristique</title>
+    <title>Autonome - Carte heuristique</title>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -24,12 +24,12 @@
 
     <div class="container">
       <div class="starter-template">
-          <h1>Embed - Carte heuristique des métiers</h1>
+          <h1>Autonome - Carte heuristique des métiers</h1>
           <div id="onimm" class="onimm-container"></div>
 
           <div>
             <p>
-                Sur la fiche métier.
+                Autonome (pas sur la fiche métier)
                 Carte heuristique des métiers de l'Onisep.
                 Cliquez sur le noeud central pour avoir de l'information dessus.
                 Cliquez sur les noeuds périphériques pour naviguer vers eux.
