--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
     <script src="js/libs/jquery-1.8.2.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/libs/d3.min.js"></script>
-    <script src="js/onimm-1.3.js"></script>
+    <script src="js/onimm-1.4.js"></script>
     <script>
         // Onisep Mind Mapping
       var onimm = onimm || {};
-      onimm = Onimm("onimm", "10183", "./data/carte_heuristique.xml", []);
+      var is_mind_map_embed = true;
+      onimm = Onimm("onimm", "10183", "./data/carte_heuristique.xml", [], is_mind_map_embed);
 
 
       // window.setTimeout(function() {
