Add new logo button ; begin separate embed and idpt ; synth in modal window

--- a/independant.html
+++ b/independant.html
@@ -19,23 +19,22 @@
 <!--     <link href="css/normalize.css" rel="stylesheet"> -->
     <link href="css/onimm-main.css" rel="stylesheet">
     <link href="css/onimm-theme.css" rel="stylesheet">
+
+    <!-- SPECIAL ONLY FOR INDEPENDANT PRESENTATION-->
+    <style type="text/css" media="screen">
+      body {
+        margin: 0;
+      }
+    </style>
+
+
   </head>
   <body>
 
     <div class="container">
       <div class="starter-template">
-          <h1>Autonome - Carte heuristique des métiers</h1>
+          
           <div id="onimm" class="onimm-container"></div>
-
-          <div>
-            <p>
-                Autonome (pas sur la fiche métier)
-                Carte heuristique des métiers de l'Onisep.
-                Cliquez sur le noeud central pour avoir de l'information dessus.
-                Cliquez sur les noeuds périphériques pour naviguer vers eux.
-                L'historique se crée au fur et à mesure de la navigation dans la carte heuristique.
-            </p>
-          </div>
 
       </div>
     </div>
