--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 <!--     <link href="css/normalize.css" rel="stylesheet"> -->
     <link href="css/onimm-main.css" rel="stylesheet">
     <link href="css/onimm-theme.css" rel="stylesheet">
+
+
+    <!-- SPECIAL ONLY FOR EMBED PRESENTATION-->
+    <style type="text/css" media="screen">
+      .onimm-container {
+        margin: auto;
+      }
+    </style>
+
+
   </head>
   <body>
 
